--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "dependencies": {
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
-    "apexcharts": "^3.41.1",
+    "apexcharts": "^3.45.2",
     "jsvectormap": "^1.5.3",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
     "react-jvectormap": "^0.0.16",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
