some fixes needed

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "apexcharts": "^3.46.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "headless-stepper": "^1.10.0",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.343.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.50.1",
     "react-jvectormap": "^0.0.16",
     "tailwind-merge": "^2.2.1",
