--- a/package.json
+++ b/package.json
@@ -18,32 +18,34 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
-    "apexcharts": "^3.46.0",
+    "apexcharts": "^3.47.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "headless-stepper": "^1.10.0",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.343.0",
-    "next": "^14.1.0",
+    "next": "^14.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.0",
     "react-jvectormap": "^0.0.16",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.21",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
+    "@types/node": "^20.11.27",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
