--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
+    "@tanstack/react-table": "^8.13.2",
     "apexcharts": "^3.47.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
