--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
-    "@tanstack/react-table": "^8.13.2",
-    "apexcharts": "^3.47.0",
+    "@tanstack/react-table": "^8.15.0",
+    "apexcharts": "^3.48.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "0.2.1",
     "headless-stepper": "^1.10.0",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.343.0",
-    "next": "^14.1.3",
+    "next": "^14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.51.1",
     "react-jvectormap": "^0.0.16",
-    "sonner": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.27",
-    "@types/react": "^18.2.65",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "postcss": "^8.4.35",
+    "eslint-config-next": "^14.1.4",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.3"
   }
 }
