print functionality layout added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
+    "@react-pdf/renderer": "^3.4.2",
     "@tanstack/react-table": "^8.15.0",
     "apexcharts": "^3.48.0",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
     "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.51.2",
     "react-jvectormap": "^0.0.16",
+    "react-modal": "^3.16.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
